# python-hackathon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
tests/: test_main.py
