[tool.poetry]
name = "python-hackathon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_hackathon"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
polars = "^0.16.18"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
